core/styles/style.scss
.quickActions-contextMenu-button {
  transition: opacity .3s ease;

  &.disabled {
    opacity: .3 !important;
    pointer-events: none !important;
  }
}

.quickActions-icon {
  display: inline;

  svg {
    width: 15px;
    margin-left: 2px;
    height: 15px;
    position: absolute;
  }
}

.quickActions-hint {
  display: inline;
  opacity: .4;
  transition: opacity .3s ease;

  &:hover {
    opacity: 1;
  }

  svg {
    width: 15px;
    margin-left: 2px;
    height: 15px;
    position: absolute;
  }

  &+ span {
    padding-left: 20px;
  }
}

.quickActions-modal {
  &#emojiUtility-defaultCloneId > form {
    height: 220px;
    transition: height 0.15s ease-in-out 0s;
  }

  &#quickActions-mu-users {
    button:not([class*='reset-']):last-child {
      color: #f04747;

      &:hover {
        div[class*='contents-'] {
          background-image: linear-gradient(0deg, transparent, transparent 1px, #f04747 0,
            #f04747 2px, transparent 0);
        }
      }
    }
  }

  &-inner {
    color: #c7c9cc;

    [class*='divider-'] {
      display: none;
    }
  
    [class*='marginBottom20-'] {
      margin-bottom: 0;
    }

    &-desc[id='update-passphrase'] {
      margin-bottom: 20px;
    }
  
    &-desc-hint {
      b {
        color: #43b581;
        text-transform: uppercase;
      }
    }
  
    &-spacer {
      margin-top: 20px;
    }
  }
}

.quickActions-settingModal {
  [class*='divider-'] {
    display: none;
  }

  [class*='marginBottom20-'] {
    margin-bottom: 0;
  }
}

